--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
 - script: dotnet test
   workingDirectory: chapter-14/start/backend
   displayName: 'backend tests'
-- script: dotnet publish -c $(buildConfiguration) --selfcontained true -r win-x86
+- script: dotnet publish -c $(buildConfiguration) --self-contained true -r win-x86
   workingDirectory: chapter-14/start/backend
   displayName: 'backend publish'
 - task: ArchiveFiles@2
